# youtube_downloader

./: .gitignore  Cargo.toml  README.md  config.toml  download_history.json  package-lock.json  package.json  svelte.config.js  tailwind.config.js
languages/: english.toml  english.toml.bak  hungarian.toml  hungarian.toml.bak
src/: app.css  app_config.rs  config.rs  downloader.rs  downloaders.rs  installer.rs  installers.rs  main.rs  models.rs  runtime.rs  translation.rs  translations.rs  utils.rs
src-tauri/: tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/lib/components/: WindowControls.svelte
src/models/: history.rs  language.rs  mod.rs  music.rs  translation.rs
src/routes/: +layout.svelte  +page.svelte
src/routes/settings/: +layout.svelte  +page.svelte
src/views/: languages.rs  main.rs  mod.rs  settings.rs
wix/: main.wxs
