[package]
name = "youtube-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.10"
sevenz-rust = "0.6.1"
tokio = { version = "1.42.0", features = ["full"] }
youtube_dl = { version = "0.10.0", features = ["downloader-rustls-tls", "reqwest", "tokio"] }
