[package]
name = "youtube-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10.0"
# reqwest = "0.12.10"
serde = { version = "1.0.217", features = ["derive"] }
# sevenz-rust = "0.6.1"
youtube_dl = { version = "0.10.0", features = [
    "downloader-rustls-tls",
    "reqwest",
    "tokio",
] }
