[package]
name = "youtube-downloader"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10.0"
rfd = "0.15.3"
# reqwest = "0.12.10"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.8.11"
chrono = "0.4.35"
dirs = "5.0.1"
lazy_static = "1.4.0"
# sevenz-rust = "0.6.1"
youtube_dl = { version = "0.10.0", features = [
    "downloader-rustls-tls",
    "reqwest",
    "tokio",
] }
